// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallToAction should match a snapshot 1`] = `
<div
  className=""
  data-test=""
>
  <Component
    className="mb-0"
    message="My title"
    type="success"
  />
  <Component
    flexColumn={true}
    hasBackground={true}
    hasPadding={true}
  >
    <p />
    <Component>
      <Component
        dataTest=""
        type="button"
        variant="primary"
      >
        My button
      </Component>
    </Component>
  </Component>
</div>
`;

exports[`CallToAction should match snapshot with footerItems 1`] = `
<div
  className=""
  data-test=""
>
  <Component
    className="mb-0"
    message="Test"
    type="success"
  />
  <Component
    flexColumn={true}
    hasBackground={true}
    hasPadding={true}
  >
    <p />
    <Component>
      <Component
        onClick={[MockFunction]}
        type="button"
        variant="primary"
      >
        My Apps
      </Component>
      <Component
        onClick={[MockFunction]}
        type="button"
        variant="primary"
      >
        Submit another app
      </Component>
    </Component>
  </Component>
</div>
`;
